[package]
name = "codex-session-manager"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Source-backed CLI and TUI for inspecting, repairing, and migrating Codex sessions."
readme = "README.md"
keywords = ["cli", "sessions", "migration", "jsonl", "codex"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1"
arboard = "3"
chrono = "0.4.43"
clap = { version = "4", features = ["derive"] }
codex-core = { path = "../codex/codex-rs/core" }
codex-protocol = { path = "../codex/codex-rs/protocol" }
codex-state = { path = "../codex/codex-rs/state" }
crossterm = "0.28.1"
ratatui = "0.29.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shell-words = "1.1.0"
sys-locale = "0.3.2"
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread", "time"] }
toml = "0.9.5"
toml_edit = "0.24.0"

[dev-dependencies]
pretty_assertions = "1"
tempfile = "3.23.0"

[patch.crates-io]
tokio-tungstenite = { git = "https://github.com/openai-oss-forks/tokio-tungstenite", rev = "132f5b39c862e3a970f731d709608b3e6276d5f6" }
tungstenite = { git = "https://github.com/openai-oss-forks/tungstenite-rs", rev = "9200079d3b54a1ff51072e24d81fd354f085156f" }

[patch."ssh://git@github.com/openai-oss-forks/tungstenite-rs.git"]
tungstenite = { git = "https://github.com/openai-oss-forks/tungstenite-rs", rev = "9200079d3b54a1ff51072e24d81fd354f085156f" }
